--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
-    "@tauri-apps/api": "^1.5.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-opener": "^2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "@tauri-apps/cli": "2.2.2",
+    "@tauri-apps/cli": "^2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
