--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,10 @@ dist
 dist-ssr
 *.local
 target
+**/target
+
+# Ignore Cargo.lock files
+Cargo.lock
 
 # Editor directories and files
 .vscode/*
@@ -26,3 +30,4 @@ target
 *.njsproj
 *.sln
 *.sw?
+
