--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,3 +16,7 @@ serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
 xlab-core = { path = "../xlab-core" }
 tauri-plugin-opener = "2.2.3"
+
+[profile.dev.package.xlab-core]
+opt-level = 3
+
