--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -8,15 +8,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "2", features = [] }
+tauri-build = { version = "1.5.5", features = [] }
 
 [dependencies]
-tauri = { version = "2.2.0", features = [] }
+tauri = { version = "1.5", features = ["dialog-save"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
 xlab-core = { path = "../xlab-core" }
-tauri-plugin-opener = "2.2.3"
 
-[profile.dev.package.xlab-core]
+[profile.dev.package."xlab-core"]
 opt-level = 3
-
