--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,5 +16,11 @@ serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
 xlab-core = { path = "../xlab-core" }
 
+[features]
+# this feature is used for production builds or when `devPath` points to the filesystem
+# DO NOT REMOVE!!
+custom-protocol = ["tauri/custom-protocol"]
+
 [profile.dev.package."xlab-core"]
 opt-level = 3
+
