--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -8,19 +8,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.5.5", features = [] }
+tauri-build = { version = "2.0.5", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = ["dialog-save"] }
-serde = { version = "1.0.217", features = ["derive"] }
-serde_json = "1.0.135"
+tauri = { version = "2.2.5", features = [] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+tauri-plugin-dialog = "2"
 xlab-core = { path = "../xlab-core" }
-
-[features]
-# this feature is used for production builds or when `devPath` points to the filesystem
-# DO NOT REMOVE!!
-custom-protocol = ["tauri/custom-protocol"]
 
 [profile.dev.package."xlab-core"]
 opt-level = 3
-
