--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-select": "^2.1.4",
-    "class-variance-authority": "^0.7.1",
+    "@radix-ui/react-select": "^2.1.5",
+    "@tauri-apps/api": "^2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.471.0",
     "react": "^18.2.0",
