--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "xlab"
 version = "0.1.0"
-description = "A Tauri App"
+description = "High performance screen recorder"
 authors = ["you"]
 edition = "2021"
 
@@ -11,9 +11,9 @@ edition = "2021"
 tauri-build = { version = "2.0.5", features = [] }
 
 [dependencies]
-tauri = { version = "2.2.5", features = [] }
-serde = { version = "1.0.217", features = ["derive"] }
-serde_json = "1.0.138"
+tauri = { version = "2.5.1", features = [] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
 tauri-plugin-dialog = "2"
 xlab-core = { path = "../xlab-core" }
 
