--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -87,6 +87,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Install build dependencies (FFmpeg, pkg-config, CMake)
+        run: choco install ffmpeg pkg-config cmake
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
