--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -42,16 +42,15 @@ jobs:
             wget \
             file \
             libpipewire-0.3-dev \
-            ffmpeg \
+            clang \
+            libgbm-dev \
             libavcodec-dev \
             libavformat-dev \
             libavutil-dev \
             libavfilter-dev \
             libavdevice-dev \
             libswscale-dev \
-            libswresample-dev \
-            clang \
-            libgbm-dev
+            libswresample-dev
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -104,39 +103,17 @@ jobs:
         with:
           workspaces: './src-tauri -> target'
 
-      - name: Install LLVM and Clang
-        uses: KyleMayes/install-llvm-action@v2
-        with:
-          version: '18'
-
-      - name: Install FFmpeg via vcpkg
+      - name: Install FFmpeg (Windows)
         run: |
-          # Install FFmpeg with required features using vcpkg
-          vcpkg install ffmpeg[core,avcodec,avdevice,avfilter,avformat,swresample,swscale]:x64-windows-static-md
+          # Install FFmpeg with static libraries via vcpkg
+          vcpkg install ffmpeg:x64-windows-static-md
         shell: pwsh
 
-      - name: Configure FFmpeg environment
-        shell: pwsh
+      - name: Set vcpkg environment
         run: |
-          # Set up environment variables for ffmpeg-sys-next
-          $vcpkgRoot = $env:VCPKG_INSTALLATION_ROOT
-          if (-not $vcpkgRoot) {
-            throw "VCPKG_INSTALLATION_ROOT environment variable is not set"
-          }
-          
-          $ffmpegDir = "$vcpkgRoot\installed\x64-windows-static-md"
-          if (-not (Test-Path $ffmpegDir)) {
-            throw "FFmpeg installation directory not found: $ffmpegDir"
-          }
-          
-          Write-Host "Using vcpkg root: $vcpkgRoot"
-          Write-Host "Using FFmpeg directory: $ffmpegDir"
-          
-          echo "VCPKG_ROOT=$vcpkgRoot" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          echo "FFMPEG_DIR=$ffmpegDir" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          echo "PKG_CONFIG_PATH=$ffmpegDir\lib\pkgconfig" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          echo "FFMPEG_INCLUDE_DIR=$ffmpegDir\include" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          echo "FFMPEG_LIB_DIR=$ffmpegDir\lib" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          echo "VCPKG_ROOT=C:\vcpkg" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          echo "VCPKGRS_DYNAMIC=1" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        shell: pwsh
 
       - name: Install npm dependencies
         run: npm ci
